# markov-cut-ups

./: .gitignore  CMakeLists.txt  README.md
include/: Dictionary.h  Options.h
output/: output_ginsberg_corso.txt  output_howl1.txt  output_howl2.txt  output_howl3.txt  output_road1.txt  output_road2.txt
src/: Dictionary.cpp  Options.cpp  main.cpp
texts/ginsberg/: howl.txt
